--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,8 @@ services:
     command: >
       /bin/sh -c "
                   while ! nc -z postgres 5432; do sleep 1; done;
-                  python manage.py collectstatic --noinput && 
+                  python manage.py collectstatic --noinput &&
+                  python manage.py makemigrations &&
                   python manage.py migrate && 
                   gunicorn --workers ${WORKERS_COUNT} --reload --bind 0.0.0.0:8000 config.wsgi:application"
     volumes:
