--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - ./robot:/app/robot
       - ./static:/app/static
+      - ./assets:/app/assets
       - ./media:/app/media
     networks:
       - shared_network
